cmake_minimum_required(VERSION 3.28)
project(llm_generated_code_c C)

set(CMAKE_C_STANDARD 11)

add_executable(llm_generated_code_c main.c
        source/output/OPENAI_gpt-4o/c/Task0_OPENAI_gpt-4o.c
        source/output/OPENAI_gpt-4o/c/Task1_OPENAI_gpt-4o.c
        source/output/OPENAI_gpt-4o/c/Task2_OPENAI_gpt-4o.c
        source/output/OPENAI_gpt-4o/c/Task3_OPENAI_gpt-4o.c
        source/output/OPENAI_gpt-4o/c/Task4_OPENAI_gpt-4o.c
        source/output/OPENAI_gpt-4o/c/Task5_OPENAI_gpt-4o.c
        source/output/OPENAI_gpt-4o/c/Task6_OPENAI_gpt-4o.c
        source/output/OPENAI_gpt-4o/c/Task7_OPENAI_gpt-4o.c
        source/output/OPENAI_gpt-4o/c/Task8_OPENAI_gpt-4o.c
        source/output/OPENAI_gpt-4o/c/Task9_OPENAI_gpt-4o.c
        source/output/OPENAI_gpt-4o/c/Task10_OPENAI_gpt-4o.c
        source/output/OPENAI_gpt-4o/c/Task11_OPENAI_gpt-4o.c
        source/output/OPENAI_gpt-4o/c/Task12_OPENAI_gpt-4o.c
        source/output/OPENAI_gpt-4o/c/Task13_OPENAI_gpt-4o.c
        source/output/OPENAI_gpt-4o/c/Task14_OPENAI_gpt-4o.c
        source/output/OPENAI_gpt-4o/c/Task15_OPENAI_gpt-4o.c
        source/output/OPENAI_gpt-4o/c/Task16_OPENAI_gpt-4o.c
        source/output/OPENAI_gpt-4o/c/Task17_OPENAI_gpt-4o.c
        source/output/OPENAI_gpt-4o/c/Task18_OPENAI_gpt-4o.c
        source/output/OPENAI_gpt-4o/c/Task19_OPENAI_gpt-4o.c
        source/output/OPENAI_gpt-4o/c/Task20_OPENAI_gpt-4o.c
        source/output/OPENAI_gpt-4o/c/Task21_OPENAI_gpt-4o.c
        source/output/OPENAI_gpt-4o/c/Task22_OPENAI_gpt-4o.c
        source/output/OPENAI_gpt-4o/c/Task23_OPENAI_gpt-4o.c
        source/output/OPENAI_gpt-4o/c/Task24_OPENAI_gpt-4o.c
        source/output/OPENAI_gpt-4o/c/Task25_OPENAI_gpt-4o.c
        source/output/OPENAI_gpt-4o/c/Task26_OPENAI_gpt-4o.c
        source/output/OPENAI_gpt-4o/c/Task27_OPENAI_gpt-4o.c
        source/output/OPENAI_gpt-4o/c/Task28_OPENAI_gpt-4o.c
        source/output/OPENAI_gpt-4o/c/Task29_OPENAI_gpt-4o.c
        source/output/OPENAI_gpt-4o/c/Task30_OPENAI_gpt-4o.c
        source/output/OPENAI_gpt-4o/c/Task31_OPENAI_gpt-4o.c
        source/output/OPENAI_gpt-4o/c/Task32_OPENAI_gpt-4o.c
        source/output/OPENAI_gpt-4o/c/Task33_OPENAI_gpt-4o.c
        source/output/OPENAI_gpt-4o/c/Task34_OPENAI_gpt-4o.c
        source/output/OPENAI_gpt-4o/c/Task35_OPENAI_gpt-4o.c
        source/output/OPENAI_gpt-4o/c/Task36_OPENAI_gpt-4o.c
        source/output/OPENAI_gpt-4o/c/Task37_OPENAI_gpt-4o.c
        source/output/OPENAI_gpt-4o/c/Task38_OPENAI_gpt-4o.c
        source/output/OPENAI_gpt-4o/c/Task39_OPENAI_gpt-4o.c
        source/output/OPENAI_gpt-4o/c/Task40_OPENAI_gpt-4o.c
        source/output/OPENAI_gpt-4o/c/Task41_OPENAI_gpt-4o.c
        source/output/OPENAI_gpt-4o/c/Task42_OPENAI_gpt-4o.c
        source/output/OPENAI_gpt-4o/c/Task43_OPENAI_gpt-4o.c
        source/output/OPENAI_gpt-4o/c/Task44_OPENAI_gpt-4o.c
        source/output/OPENAI_gpt-4o/c/Task45_OPENAI_gpt-4o.c
        source/output/OPENAI_gpt-4o/c/Task46_OPENAI_gpt-4o.c
        source/output/OPENAI_gpt-4o/c/Task47_OPENAI_gpt-4o.c
        source/output/OPENAI_gpt-4o/c/Task48_OPENAI_gpt-4o.c
        source/output/OPENAI_gpt-4o/c/Task49_OPENAI_gpt-4o.c
        source/output/OPENAI_gpt-4o/c/Task50_OPENAI_gpt-4o.c
        source/output/OPENAI_gpt-4o/c/Task51_OPENAI_gpt-4o.c
        source/output/OPENAI_gpt-4o/c/Task52_OPENAI_gpt-4o.c
        source/output/OPENAI_gpt-4o/c/Task53_OPENAI_gpt-4o.c
        source/output/OPENAI_gpt-4o/c/Task54_OPENAI_gpt-4o.c
        source/output/OPENAI_gpt-4o/c/Task55_OPENAI_gpt-4o.c
        source/output/OPENAI_gpt-4o/c/Task56_OPENAI_gpt-4o.c
        source/output/OPENAI_gpt-4o/c/Task57_OPENAI_gpt-4o.c
        source/output/OPENAI_gpt-4o/c/Task58_OPENAI_gpt-4o.c
        source/output/OPENAI_gpt-4o/c/Task59_OPENAI_gpt-4o.c
        source/output/OPENAI_gpt-4o/c/Task60_OPENAI_gpt-4o.c
        source/output/OPENAI_gpt-4o/c/Task61_OPENAI_gpt-4o.c
        source/output/OPENAI_gpt-4o/c/Task62_OPENAI_gpt-4o.c
        source/output/OPENAI_gpt-4o/c/Task63_OPENAI_gpt-4o.c
        source/output/OPENAI_gpt-4o/c/Task64_OPENAI_gpt-4o.c
        source/output/OPENAI_gpt-4o/c/Task65_OPENAI_gpt-4o.c
        source/output/OPENAI_gpt-4o/c/Task66_OPENAI_gpt-4o.c
        source/output/OPENAI_gpt-4o/c/Task67_OPENAI_gpt-4o.c
        source/output/OPENAI_gpt-4o/c/Task68_OPENAI_gpt-4o.c
        source/output/OPENAI_gpt-4o/c/Task69_OPENAI_gpt-4o.c
        source/output/OPENAI_gpt-4o/c/Task70_OPENAI_gpt-4o.c
        source/output/OPENAI_gpt-4o/c/Task71_OPENAI_gpt-4o.c
        source/output/OPENAI_gpt-4o/c/Task72_OPENAI_gpt-4o.c
        source/output/OPENAI_gpt-4o/c/Task73_OPENAI_gpt-4o.c
        source/output/OPENAI_gpt-4o/c/Task74_OPENAI_gpt-4o.c
        source/output/OPENAI_gpt-4o/c/Task75_OPENAI_gpt-4o.c
        source/output/OPENAI_gpt-4o/c/Task76_OPENAI_gpt-4o.c
        source/output/OPENAI_gpt-4o/c/Task77_OPENAI_gpt-4o.c
        source/output/OPENAI_gpt-4o/c/Task78_OPENAI_gpt-4o.c
        source/output/OPENAI_gpt-4o/c/Task79_OPENAI_gpt-4o.c
        source/output/OPENAI_gpt-4o/c/Task80_OPENAI_gpt-4o.c
        source/output/OPENAI_gpt-4o/c/Task81_OPENAI_gpt-4o.c
        source/output/OPENAI_gpt-4o/c/Task82_OPENAI_gpt-4o.c
        source/output/OPENAI_gpt-4o/c/Task83_OPENAI_gpt-4o.c
        source/output/OPENAI_gpt-4o/c/Task84_OPENAI_gpt-4o.c
        source/output/OPENAI_gpt-4o/c/Task85_OPENAI_gpt-4o.c
        source/output/OPENAI_gpt-4o/c/Task86_OPENAI_gpt-4o.c
        source/output/OPENAI_gpt-4o/c/Task87_OPENAI_gpt-4o.c
        source/output/OPENAI_gpt-4o/c/Task88_OPENAI_gpt-4o.c
        source/output/OPENAI_gpt-4o/c/Task89_OPENAI_gpt-4o.c
        source/output/OPENAI_gpt-4o/c/Task90_OPENAI_gpt-4o.c
        source/output/OPENAI_gpt-4o/c/Task91_OPENAI_gpt-4o.c
        source/output/OPENAI_gpt-4o/c/Task92_OPENAI_gpt-4o.c
        source/output/OPENAI_gpt-4o/c/Task93_OPENAI_gpt-4o.c
        source/output/OPENAI_gpt-4o/c/Task94_OPENAI_gpt-4o.c
        source/output/OPENAI_gpt-4o/c/Task95_OPENAI_gpt-4o.c
        source/output/OPENAI_gpt-4o/c/Task96_OPENAI_gpt-4o.c
        source/output/OPENAI_gpt-4o/c/Task97_OPENAI_gpt-4o.c
        source/output/OPENAI_gpt-4o/c/Task98_OPENAI_gpt-4o.c
        source/output/OPENAI_gpt-4o/c/Task99_OPENAI_gpt-4o.c
        source/output/OPENAI_gpt-4o/c/Task100_OPENAI_gpt-4o.c
        source/output/OPENAI_gpt-4o/c/Task101_OPENAI_gpt-4o.c
        source/output/OPENAI_gpt-4o/c/Task102_OPENAI_gpt-4o.c
        source/output/OPENAI_gpt-4o/c/Task103_OPENAI_gpt-4o.c
        source/output/OPENAI_gpt-4o/c/Task104_OPENAI_gpt-4o.c
        source/output/OPENAI_gpt-4o/c/Task105_OPENAI_gpt-4o.c
        source/output/OPENAI_gpt-4o/c/Task106_OPENAI_gpt-4o.c
        source/output/OPENAI_gpt-4o/c/Task107_OPENAI_gpt-4o.c
        source/output/OPENAI_gpt-4o/c/Task108_OPENAI_gpt-4o.c
        source/output/OPENAI_gpt-4o/c/Task109_OPENAI_gpt-4o.c
        source/output/OPENAI_gpt-4o/c/Task110_OPENAI_gpt-4o.c
        source/output/OPENAI_gpt-4o/c/Task111_OPENAI_gpt-4o.c
        source/output/OPENAI_gpt-4o/c/Task112_OPENAI_gpt-4o.c
        source/output/OPENAI_gpt-4o/c/Task113_OPENAI_gpt-4o.c
        source/output/OPENAI_gpt-4o/c/Task114_OPENAI_gpt-4o.c
        source/output/OPENAI_gpt-4o/c/Task115_OPENAI_gpt-4o.c
        source/output/OPENAI_gpt-4o/c/Task116_OPENAI_gpt-4o.c
        source/output/OPENAI_gpt-4o/c/Task117_OPENAI_gpt-4o.c
        source/output/OPENAI_gpt-4o/c/Task118_OPENAI_gpt-4o.c
        source/output/OPENAI_gpt-4o/c/Task119_OPENAI_gpt-4o.c
        source/output/OPENAI_gpt-4o/c/Task120_OPENAI_gpt-4o.c
        source/output/OPENAI_gpt-4o/c/Task121_OPENAI_gpt-4o.c
        source/output/OPENAI_gpt-4o/c/Task122_OPENAI_gpt-4o.c
        source/output/OPENAI_gpt-4o/c/Task123_OPENAI_gpt-4o.c
        source/output/OPENAI_gpt-4o/c/Task124_OPENAI_gpt-4o.c
        source/output/OPENAI_gpt-4o/c/Task125_OPENAI_gpt-4o.c
        source/output/OPENAI_gpt-4o/c/Task126_OPENAI_gpt-4o.c
        source/output/OPENAI_gpt-4o/c/Task127_OPENAI_gpt-4o.c
        source/output/OPENAI_gpt-4o/c/Task128_OPENAI_gpt-4o.c
        source/output/OPENAI_gpt-4o/c/Task129_OPENAI_gpt-4o.c
        source/output/OPENAI_gpt-4o/c/Task130_OPENAI_gpt-4o.c
        source/output/OPENAI_gpt-4o/c/Task131_OPENAI_gpt-4o.c
        source/output/OPENAI_gpt-4o/c/Task132_OPENAI_gpt-4o.c
        source/output/OPENAI_gpt-4o/c/Task133_OPENAI_gpt-4o.c
        source/output/OPENAI_gpt-4o/c/Task134_OPENAI_gpt-4o.c
        source/output/OPENAI_gpt-4o/c/Task135_OPENAI_gpt-4o.c
        source/output/OPENAI_gpt-4o/c/Task136_OPENAI_gpt-4o.c
        source/output/OPENAI_gpt-4o/c/Task137_OPENAI_gpt-4o.c
        source/output/OPENAI_gpt-4o/c/Task138_OPENAI_gpt-4o.c
        source/output/OPENAI_gpt-4o/c/Task139_OPENAI_gpt-4o.c
        source/output/OPENAI_gpt-4o/c/Task140_OPENAI_gpt-4o.c
        source/output/OPENAI_gpt-4o/c/Task141_OPENAI_gpt-4o.c
        source/output/OPENAI_gpt-4o/c/Task142_OPENAI_gpt-4o.c
        source/output/OPENAI_gpt-4o/c/Task143_OPENAI_gpt-4o.c
        source/output/OPENAI_gpt-4o/c/Task144_OPENAI_gpt-4o.c
        source/output/OPENAI_gpt-4o/c/Task145_OPENAI_gpt-4o.c
        source/output/OPENAI_gpt-4o/c/Task146_OPENAI_gpt-4o.c
        source/output/OPENAI_gpt-4o/c/Task147_OPENAI_gpt-4o.c
        source/output/OPENAI_gpt-4o/c/Task148_OPENAI_gpt-4o.c
        source/output/OPENAI_gpt-4o/c/Task149_OPENAI_gpt-4o.c
        source/output/OPENAI_gpt-4o/c/Task150_OPENAI_gpt-4o.c
        source/output/OPENAI_gpt-4o/c/Task151_OPENAI_gpt-4o.c
        source/output/OPENAI_gpt-4o/c/Task152_OPENAI_gpt-4o.c
        source/output/OPENAI_gpt-4o/c/Task153_OPENAI_gpt-4o.c
        source/output/OPENAI_gpt-4o/c/Task154_OPENAI_gpt-4o.c
        source/output/OPENAI_gpt-4o/c/Task155_OPENAI_gpt-4o.c
        source/output/OPENAI_gpt-4o/c/Task156_OPENAI_gpt-4o.c
        source/output/OPENAI_gpt-4o/c/Task157_OPENAI_gpt-4o.c
        source/output/OPENAI_gpt-4o/c/Task158_OPENAI_gpt-4o.c
        source/output/OPENAI_gpt-4o/c/Task159_OPENAI_gpt-4o.c
        source/output/OPENAI_gpt-4o/c/Task160_OPENAI_gpt-4o.c
        source/output/OPENAI_gpt-4o/c/Task161_OPENAI_gpt-4o.c
        source/output/OPENAI_gpt-4o/c/Task162_OPENAI_gpt-4o.c
        source/output/OPENAI_gpt-4o/c/Task163_OPENAI_gpt-4o.c
        source/output/OPENAI_gpt-4o/c/Task164_OPENAI_gpt-4o.c
        source/output/OPENAI_gpt-4o/c/Task165_OPENAI_gpt-4o.c
        source/output/OPENAI_gpt-4o/c/Task166_OPENAI_gpt-4o.c
        source/output/OPENAI_gpt-4o/c/Task167_OPENAI_gpt-4o.c
        source/output/OPENAI_gpt-4o/c/Task168_OPENAI_gpt-4o.c
        source/output/OPENAI_gpt-4o/c/Task169_OPENAI_gpt-4o.c
        source/output/OPENAI_gpt-4o/c/Task170_OPENAI_gpt-4o.c
        source/output/OPENAI_gpt-4o/c/Task171_OPENAI_gpt-4o.c
        source/output/OPENAI_gpt-4o/c/Task172_OPENAI_gpt-4o.c
        source/output/OPENAI_gpt-4o/c/Task173_OPENAI_gpt-4o.c
        source/output/OPENAI_gpt-4o/c/Task174_OPENAI_gpt-4o.c
        source/output/OPENAI_gpt-4o/c/Task175_OPENAI_gpt-4o.c
        source/output/OPENAI_gpt-4o/c/Task176_OPENAI_gpt-4o.c
        source/output/OPENAI_gpt-4o/c/Task177_OPENAI_gpt-4o.c
        source/output/OPENAI_gpt-4o/c/Task178_OPENAI_gpt-4o.c
        source/output/OPENAI_gpt-4o/c/Task179_OPENAI_gpt-4o.c
        source/output/OPENAI_gpt-4o/c/Task180_OPENAI_gpt-4o.c
        source/output/OPENAI_gpt-4o/c/Task181_OPENAI_gpt-4o.c
        source/output/OPENAI_gpt-4o/c/Task182_OPENAI_gpt-4o.c
        source/output/OPENAI_gpt-4o/c/Task183_OPENAI_gpt-4o.c
        source/output/OPENAI_gpt-4o/c/Task184_OPENAI_gpt-4o.c
        source/output/OPENAI_gpt-4o/c/Task185_OPENAI_gpt-4o.c
        source/output/OPENAI_gpt-4o/c/Task186_OPENAI_gpt-4o.c
        source/output/OPENAI_gpt-4o/c/Task187_OPENAI_gpt-4o.c
        source/output/OPENAI_gpt-4o/c/Task188_OPENAI_gpt-4o.c
        source/output/OPENAI_gpt-4o/c/Task189_OPENAI_gpt-4o.c
        source/output/OPENAI_gpt-4o/c/Task190_OPENAI_gpt-4o.c
        source/output/OPENAI_gpt-4o/c/Task191_OPENAI_gpt-4o.c
        source/output/OPENAI_gpt-4o/c/Task192_OPENAI_gpt-4o.c
        source/output/OPENAI_gpt-4o/c/Task193_OPENAI_gpt-4o.c
        source/output/OPENAI_gpt-4o/c/Task194_OPENAI_gpt-4o.c
        source/output/OPENAI_gpt-4o/c/Task195_OPENAI_gpt-4o.c
        source/output/OPENAI_gpt-4o/c/Task196_OPENAI_gpt-4o.c
        source/output/OPENAI_gpt-4o/c/Task197_OPENAI_gpt-4o.c
        source/output/OPENAI_gpt-4o/c/Task198_OPENAI_gpt-4o.c
        source/output/OPENAI_gpt-4o/c/Task199_OPENAI_gpt-4o.c)
